--- a/packages/lib/package.json
+++ b/packages/lib/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "lib",
-  "packageManager": "yarn@3.5.1",
-  "dependencies": {
+  "name": "@wanted/lib",
+  "version": "1.0.0",
+  "private": true,
+  "main": "./src/index.ts",
+  "devDependencies": {
     "typescript": "^5.0.4"
   }
 }
